compiled tests, modified projects controller and messagingcontroller

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -16,3 +16,11 @@ spring.sql.init.mode=never
 
 # Disable security for tests
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# Mail configuration for tests (using mock settings)
+spring.mail.host=localhost
+spring.mail.port=25
+spring.mail.username=test
+spring.mail.password=test
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
